# fundamental-regime-report

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  data_loader.py  main.py
app/components/: __init__.py  chart.py  header.py  interpretation.py  metric_card.py  navigation.py  warning.py
app/pages/: __init__.py  d2_results.py  limitations.py  market_state.py  overview.py  regime_timeline.py  ticker_analysis.py
app/utils/: __init__.py  formatters.py  regime_mapper.py  state_mapper.py
configs/: data.yaml
docs/: data_sources.md  handoff_to_next_code_session.md  requirements.md  tech_architecture.md  ui_components.md  ui_design.md  ux_design.md
reports/: d2_baseline_model_card.md  regime_model_card.md
scripts/: backfill_dart_fs_div.py  capture_d2_positives.py  check_pykrx_health.py  check_universe_availability.py  collect_data.py  compare_regime_models.py  diagnose_a2_b1prime.py  diagnose_corrections_for_d2.py  diagnose_credit_rating_feasibility.py  diagnose_d2_branches.py  diagnose_fdr_admin_for_d2.py  diagnose_holding_fs_div.py  diagnose_step1_results.py  refetch_notfound_ofs.py  train_d2_baseline.py  train_regime.py
src/frr/: __init__.py  config.py  labels.py
src/frr/data/: __init__.py  calendars.py  collect.py  dart.py  fdr.py  krx.py  universe_loader.py
src/frr/eval/: __init__.py  splits.py
src/frr/features/: __init__.py  baseline.py
src/frr/models/: __init__.py  classifier.py  evaluation.py
src/frr/regime/: __init__.py  comparison.py  features.py  hmm_classifier.py
tests/: test_app_no_llm_import.py  test_app_utils.py  test_calendars.py  test_chart.py  test_collect.py  test_config.py  test_dart.py  test_data_loader.py  test_fdr.py  test_features_baseline.py  test_features_lookahead.py  test_formatters.py  test_header.py  test_interpretation.py  test_isolation.py  test_krx.py  test_labels.py  test_main_shell.py  test_metric_card.py  test_models_classifier.py  test_models_evaluation.py  test_navigation.py  test_page_market_state.py  test_page_overview.py  test_page_ticker_analysis.py  test_regime_features.py  test_regime_hmm.py  test_splits.py  test_state_mapper.py  test_time_align.py  test_universe_loader.py  test_warning.py
