[project]
name = "frr"
version = "0.0.1"
description = "기업 펀더멘털 + 시장 국면 인지형 통합 분석 리포트 시스템 (한국·배치)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
authors = [{name = "MoriochoRadio"}]
keywords = ["finance", "korea", "kospi", "fundamentals", "regime", "hmm"]

dependencies = [
    # --- 데이터 소스 ---
    "pykrx>=1.0.45",
    "opendartreader>=0.2.5",
    # --- 데이터 처리 ---
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # --- 설정 / 환경 ---
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # --- 호환 (pykrx가 pkg_resources를 사용. setuptools 80부터 제거되어 <80로 핀) ---
    "setuptools>=70.0,<80.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frr"]
