[project]
name = "frr"
version = "0.0.1"
description = "기업 펀더멘털 + 시장 국면 인지형 통합 분석 리포트 시스템 (한국·배치)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
authors = [{name = "MoriochoRadio"}]
keywords = ["finance", "korea", "kospi", "fundamentals", "regime", "hmm"]

dependencies = [
    # --- 데이터 소스 ---
    "pykrx>=1.0.45",
    "finance-datareader>=0.9.94",
    "opendartreader>=0.2.5",
    # --- 데이터 처리 ---
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # --- 설정 / 환경 ---
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # --- 호환 (pykrx가 pkg_resources를 사용. setuptools 80부터 제거되어 <80로 핀) ---
    "setuptools>=70.0,<80.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# RUF002: 그리스 문자 (α/β/×) 와 라틴 문자 ambiguous 경고 비활성.
# 본 프로젝트는 한국어 docstring + PROGRESS §5.5.7 D2=α / §5.5.14 (α)(β)
# 박제로 그리스 문자가 영구 어휘. *오타 위험* 보다 *박제 일관성* 우선.
extend-ignore = ["RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: 외부 API/네트워크 의존 통합 테스트 (CI 기본 제외 — `pytest -m \"not integration\"`).",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frr"]
